--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,16 @@ body{
     background-color: #000000;
 }
 
-.carousel-inner {
-    height: 700px; /* Se cambia el valor para que se ajuste a la pantalla completa */
+.text-shadow {
+    color: #0a0a0a; /* Color del texto */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Efecto de sombra */
 }
 
+.carousel-inner {
+    height: 700px; /* Se cambia el valor para que se ajuste a la pantalla completa */
+    
+}
+
+@media (max-width: 900px) { .carousel-inner { height: 400px; }}
+
+@media (max-width: 500px) { .carousel-inner { height: 300px; }}
