Se agrega footer, script para dezplazamiento smooth y ajustes menores

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #000000; /* Se ajusta el color del backgroud de la pagina*/
+    background-color: #000000;
+    /* Se ajusta el color del backgroud de la pagina*/
 }
 
 .text-shadow {
